--- a/src/projects/arroz-blanco.hbs
+++ b/src/projects/arroz-blanco.hbs
@@ -1,30 +1,187 @@
-<h1><a href="http://albertogui.com">Alberto Guillermo de la Cruz</a></h1>
-<h2>Arroz Blanco (T-Shirt and Sticker Design, Branding)</h2>
+<head>
+<title>Arroz Blanco</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/x-icon" href="https://s3-us-west-2.amazonaws.com/wip-bucket/github/favicon.ico" />
+  <link href='https://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Anonymous+Pro' rel='stylesheet' type='text/css'>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lettering.js/0.7.0/jquery.lettering.min.js"></script>
+  <script src="http://circletype.labwire.ca/js/circletype.js"></script>
+  <style type="text/css">
+  body{
+    background-color: white;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    overflow-x: hidden;
+    font-family: 'Helvetica Neue', sans-serif;
+  }
+    .img-container{
+      position: relative;
+      max-width: 800px;
+      margin: auto;
+      font-size: 1.5em;
+      padding: 0 15px 30px 15px;
+      line-height: 1.7em;
+      top: 6em;
+    }
+    img{
+      width: 100%;
+    }
+
+    a{
+    text-decoration: none;
+    color: #212121;
+    text-transform: uppercase;
+    }
+    a:hover{
+    color: gray;
+    }
+
+    .contentlinks{
+    text-transform: none;
+    padding-bottom: 1px;
+    border-bottom: 2px solid black;
+    }
+    .contentlinks:hover{
+    padding-bottom: 4px;
+    transition: all 0.3s;
+    color: black;
+    }
+
+    #linksdown{
+    position: fixed;
+    top: 0;
+    right: 1em;
+    font-size: 1.5em;
+    z-index: 22;
+    display: inline;
+    max-width: 700px;
+    }
+
+    #navbar{
+    height: 5em;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: white;
+    z-index: 20;
+    border-bottom: solid black 2px;
+    }
+    #facedown{
+    top: 0.7em;
+    left: 1.3em;
+    position: fixed;
+    max-width: 2.5em;
+    z-index: 21;
+    }
+
+  .nav{
+    display: inline-block;
+    padding: 0;
+    margin-left: -6px;
+  }
+  .dash{
+    display: inline-block;
+    padding: 0;
+    margin-left: -6px;
+  }
+
+  #menubutton{
+    display: none;
+  }
+  h3{
+    font-weight: 400;
+  }
+
+  @media (max-width: 700px){
+    #menubutton{
+      display: inline-block;
+      float: right;
+      cursor: pointer;
+    }
+    .nav{
+      display: none;
+      text-align: right;
+    }
+    .dash{
+      display: none;
+    }
+
+  }
+  </style>
+</head>
+<body>
+      <div id="navbar"></div>
+      <a href="http://albertogui.com"><img id= "facedown" src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/face.svg"></a>
+      <div id="linksdown">
+        <p id="menubutton"><a class="contentlinks">Menu</a></p>
+        <div id="navbox">
+        <p class="nav"><a class ="contentlinks" href="https://dribbble.com/albertosoft">Dribbble</a></p>
+        <p class="dash">&mdash;</p>
+        <p class="nav"><a class ="contentlinks" href="http://twitter.com/agdelax">Twitter</a></p>
+        <p class="dash">&mdash;</p>
+        <p class="nav"><a class ="contentlinks" href="http://github.com/agdelax">Github</a></p>
+        <p class="dash">&mdash;</p>
+        <p class="nav"><a class ="contentlinks" href="http://linkedin.com/in/agdelax">LinkedIn</a></p>
+        <p class="dash">&mdash;</p>
+        <p class="nav"><a class ="contentlinks" href="https://medium.com/@albertodelacruz">Medium</a></p>
+        <p class="dash">&mdash;</p>
+        <p class="nav"><a class ="contentlinks" href="mailto:agdelax@gmail.com">Email</a></li>
+        </div>
+      </div>
 <div class="img-container">
-<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arroz-logo.jpg">
-<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arigatas.png">
+<h3>Arroz Blanco</h3>
+<!-- <p>Last year, out of curiosity I decided to check out the book <a class="contentlinks" href="https://www.amazon.com/Launch-Kick-Ass-T-Shirt-Brand-Magazine/dp/B005KSRC44">Launch a Kickass T-Shirt Brand</a>. Inspired by other hispanic T-shirt brands like <a class="contentlinks" href="http://tripleta.com/">Tripleta</a> and <a class="contentlinks" href="https://www.facebook.com/mangobajito/">MangoBajito</a>, I decided to give it a shot and that summer I set up a booth in Puerto Rico Comic Con selling t-shirts and stickers I designed. The product line consisted of 6 t-shirts and 3 stickers.</p> -->
+<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arroz-logo.jpg" style="max-width: 750px;">
+<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arigatas.png" style="max-width: 500px;">
 <img src="
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/borders.png">
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/borders.png" style="max-width: 500px;">
 <img src="
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/pelao.png">
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/pelao.png" style="max-width: 500px;">
 <img src="
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/gameboy.png">
-<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/pelear.png">
-<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/hiragana.png">
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/gameboy.png" style="max-width: 500px;">
+<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/pelear.png" style="max-width: 500px;">
+<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/hiragana.png" style="max-width: 500px;">
 <img src="
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/pique-sticker.jpg">
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/pique-sticker.jpg" style="max-width: 500px;">
 <img src="
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/banana-bros.jpg">
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/banana-bros.jpg" style="max-width: 500px;">
 <img src="
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/pistola-sticker.jpg">
-<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arroz-bizcard1.png">
-<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arroz-bizcard2.png">
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/pistola-sticker.jpg" style="max-width: 500px;">
+<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arroz-bizcard1.png" style="max-width: 500px;">
+<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arroz-bizcard2.png" style="max-width: 500px;">
 <img src="
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arroz-postcard.png">
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/arroz-postcard.png" style="max-width: 500px;">
+<!-- <p>The designs were inspired by a mix of Puerto Rican and Japanese culture, hence the name Arroz Blanco&mdash;since both Japanese and Puerto Rican cuisine have a heavy emphasis on white rice. I also set up a basic website and social media campaign promoting the products.</p> -->
+<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/sticker.jpg" style="max-width: 500px;">
+<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/arroz-blanco/booth.jpg" style="max-width: 500px;">
 </div>
 
-<p>Last year, out of curiosity I decided to check out the book <a href="http://www.amazon.com/Launch-Kick-Ass-T-Shirt-Brand-ebook/dp/B005D9J252">Launch a Kickass T-Shirt Brand</a>. Inspired by other hispanic T-shirt brands like <a href="http://shop.tripleta.com/">Tripleta</a> and <a href="http://mangobajito.com/">MangoBajito</a>, I decided to give it a shot and that summer I set up a booth in <a href="http://www.prcomiccon.com/">Puerto Rico Comic Con</a> selling t-shirts and stickers I designed.</p>
+<script type="text/javascript">
+  var clicked = false;
+    document.getElementById('menubutton').onclick = function(){
+      if (clicked === false) {
+        clicked=true;
+        $('.nav').css("display", "block");
+        $('#navbar').height("25.5em");
+      } else {
+        clicked=false;
+        $('.nav').hide();
+        $('#navbar').height("5em");
+      }
+    }
 
-<p>The designs were inspired by a mix of Puerto Rican and Japanese culture, hence the name Arroz Blanco (since both Japanese and Puerto Rican cuisine have a heavy emphasis on white rice). I also set up a basic website and social media campaign promoting the products. My expectations with the brand weren’t in line with the reality. I wanted to be completely sold out of my product by the end of Comic Con, instead I was able to sell a quarter of my merchandise. I learned from the experience that I didn’t want to get into the t-shirt business, however it was because of this project I first started becoming interested in web design, collaborating with a programmer friend of mine in making the website. In designing the website I started reading up on responsive web design and usability and in the process became interested in user experience.</p>
+    $(window).on('resize', function(event){
 
-<p>And yes, I’m still sitting on about a hundred t-shirts.</p>
+      var windowWidth = $(window).width();
+      if(windowWidth > 701){
+        $('.nav').css("display", "inline-block");
+        $('#navbar').height("5em");
+      } else if (windowWidth < 701){
+        $('.nav').hide();
+      }
+    });
+</script>
+</body>
