--- a/src/projects/artbinder-personas.hbs
+++ b/src/projects/artbinder-personas.hbs
@@ -1,5 +1,5 @@
 <head>
-<title>Alice Concierge CRM</title>
+<title>ArtBinder Personas</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="https://s3-us-west-2.amazonaws.com/wip-bucket/github/favicon.ico" />
   <link href='https://fonts.googleapis.com/css?family=Roboto+Slab' rel='stylesheet' type='text/css'>
@@ -132,23 +132,40 @@
         </div>
       </div>
 <div class="img-container">
-<h3>Alice Concierge CRM</h3>
-<p>At Alice I was placed in charge of leading the design for the development of a concierge CRM system for managing contacts and making recommendations to hotel guests on nearby vendors. We wanted to develop a system where concierge can quickly make recommendations to hotel guests by searching through their notes and database on nearby vendors and being able to easily export the vendor data as a PDF.</p>
+<h3>ArtBinder Personas</h3>
+<p>At ArtBinder, we had a range of applications that ranged from consumer facing to enterprise B2B solutions that all utilized their own independent systems. The project I was tasked with was identifying, interviewing and synthesizing all the key users for this range of applications in preparation of the launch of the new version of their new IMS, one that uses the same backend system across all products.</p>
 
-<p>After doing a competitive analysis of similar CRM systems (Yelp, TripAdvisor, OpenTable, etc.) we concluded that the most efficient way to display the data was a bisected screen, one side showing the list of available vendors and the other side showing the selected vendor profile. This way concierge can be able to look at a vendor in closer detail and still keep track of other options in the area without having to switch in and out of multiple web pages.</p>
-<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-main.png" style="border: 1px solid #d3d3d3">
-<p>Hotel employees can also easily leaves notes and reviews on the vendor profile, making the information more personalised to the hotel the service is hosted on.</p>
-<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-categories.png" style="border: 1px solid #d3d3d3">
+<p>Working with the sales and customer success teams as well as users, I found that the user that actually makes the financial decision to purchase the product is not the user that actively uses the products on their day-to-day workflow. With that information I developed a tiered system for the Personas.</p>
+<ul>
+  <li>Customer Persona&mdash;Unlikely to use the application but still makes the final decision on whether or not to purchase the product.</li>
+  <li>Primary Persona&mdash;The main type of user, using our products on a daily basis.</li>
+  <li>Served Persona&mdash;The typical recipient of the product's services, specifically the customer.</li>
+</ul>
+<p>With this system we can identify the types of shareholders and engage them throughout the product lifecycle.</p>
+<img src="  
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/ArtBinder/large-dealer.jpg" style="border: 1px solid #d3d3d3">
+<img src="  
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/ArtBinder/art-collector.jpg" style="border: 1px solid #d3d3d3">
 <img src="
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-entry.png">
-<img src="https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-email.png">
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/ArtBinder/small-dealer.jpg">
+<img src="  
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/ArtBinder/director.jpg">
 <img src="
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-print.png">
-<p>The final step was developing a PDF layout that takes account of all the data available on the profile that can be printed or emailed to the hotel guest, along with navigation and additional comments by the concierge.</p>
-
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/ArtBinder/assistant.jpg">
 <img src="
-https://s3-us-west-2.amazonaws.com/wip-bucket/github/alice-crm/vendor-crm-pdf.png" style="border: 1px solid #d3d3d3;max-width:550px;">
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/ArtBinder/archivist.jpg">
+<img src="
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/ArtBinder/small-collector.jpg">
+<img src="
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/ArtBinder/artist.jpg">
+<p>By analyzing the user research, I developed workflows of the various personas, both in daily use as well as in art fair usage, which accounts for up to 60% of their total sales.</p>
+<img src="
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/ArtBinder/persona-user-flows.jpg">
+<p>Finally, I identified the customer journey, listing the ways marketing, sales and client success work together to recruit customers and how they are able to differentiate themselves in the marketplace.</p>
+<img src="
+https://s3-us-west-2.amazonaws.com/wip-bucket/github/ArtBinder/ab-customer-journey.jpg">
 </div>
+
 <script type="text/javascript">
   var clicked = false;
     document.getElementById('menubutton').onclick = function(){
