--- a/src/resume.hbs
+++ b/src/resume.hbs
@@ -1,14 +1,46 @@
-<h1><a href="http://albertogui.com">Alberto Guillermo de la Cruz</a></h1>
-<h3><a href="mailto:agdelax@gmail.com">agdelax@gmail.com</a></h3>
+<head>
+  <style type="text/css">
+  body{
+    font-family: sans-serif;
+    max-width: 500px;
+    margin: auto;
+  }
+  #topnav{
+    display: inline-block;
+  }
+
+  a{
+    text-decoration: none;
+    color: black;
+    border-bottom: 1px solid black;
+    padding: 0;
+  }
+  a:hover{
+    padding-bottom: 3px;
+  }
+  </style>
+</head>
+<h2><a href="http://albertogui.com">Alberto Guillermo de la Cruz</a></h2>
+<h3 style="margin-top:-18px;"><a href="mailto:agdelax@gmail.com">agdelax@gmail.com</a></h3>
 
 <div class="column">
 <h2>Experience</h2>
+
+<h3><a href="http://artbinder.com/">ArtBinder</a>, Product Design Intern</h3>
+<p>Winter 2016 - Present</p>
+  <ul>
+    <li>User Experience</li>
+    <li>User Research</li>
+    <li>Interface Design</li>
+    <li>Web Design</li>
+    <li>Prototyping</li>
+  </ul>
 
 <h3><a href="https://www.aliceapp.com/">Alice App</a>, UI/UX Intern</h3>
 <p>Fall 2014 - Summer 2015</p>
   <ul>
     <li>Interface Design</li>
-    <li>Website Design</li>
+    <li>Web Design</li>
     <li>Prototyping</li>
     <li>User Research</li>
   </ul>
@@ -64,22 +96,18 @@
 <h2>Skills</h2>
   <ul>
     <li>Adobe Creative Suite</li>
-      <ul>
+      <ul style="margin-top: 0;">
         <li>Photoshop</li>
         <li>Illustrator</li>
         <li>InDesign</li>
         <li>After Effects</li>
         <li>Premiere</li>
       </ul>
-    <li>Bohemian Sketch</li>
-    <li>HTML5/CSS3/JS</li>
+    <li>Sketch</li>
+    <li>HTML/CSS/JS</li>
     <li>Sass</li>
     <li>jQuery</li>
-    <li>AngularJS</li>
-    <li>ReactJS</li>
-    <li>D3</li>
-    <li>Git Version Control</li>
-    <li>Grunt</li>
+    <li>GitHub</li>
     <li>Googling StackOverflow</li>
   </ul>
 
