--- a/style.css
+++ b/style.css
@@ -2,6 +2,12 @@ body{
     font-family: 'Roboto Slab', serif;
     color: #262626;
 }
+.main-container{
+    max-width: 650px;
+    width: 100%;
+    padding: 10px;
+    margin: 20px auto;
+}
 #center-box{
     display: flex;
     display: -webkit-flex;
